--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,8 @@
         </activity>
 
         <activity android:name=".activity.AboutActivity" />
+        <activity android:name=".activity.VideoDetailActivity" />
+
     </application>
 
 </manifest>
