--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,4 +26,5 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.5.2'
     compile 'com.android.support:support-v4:21.0.3'
     compile 'com.jakewharton:butterknife:7.0.1'
+    compile files('libs/xUtils-2.6.14.jar')
 }
